deploy/k8s/deploy-CI-Azure.template.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: aggregation
  name: aggregation
  namespace: devopstrain
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: aggregation
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aggregation
    spec:
      containers:
      - image: devopstrain/aggregation:${BUILD_NUMBER}
        imagePullPolicy: Always
        name: aggregation
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 2
          failureThreshold: 4
        livenessProbe:
          httpGet:
            path: /api/live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 15
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: aggregation
  name: aggregation
  namespace: devopstrain
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: aggregation
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aggregation
  namespace: devopstrain
spec:
  rules:
  - host: aggregation.devopstrain.spcoj18ldz.stackpoint.io
    http:
      paths:
      - path:
        backend:
          serviceName: aggregation
          servicePort: 80
