deploy/k8s/deploy-CI.yaml
#---
#apiVersion: extensions/v1beta1
#kind: Deployment
#metadata:
#  creationTimestamp: null
#  labels:
#    app: aggregation
#  name: aggregation
#  namespace: devopstrain
#spec:
#  replicas: 2
#  selector:
#    matchLabels:
#      app: aggregation
#  strategy: {}
#  template:
#    metadata:
#      creationTimestamp: null
#      labels:
#        app: aggregation
#    spec:
#      containers:
#      - image: devopstrain/aggregation:latest
#        name: aggregation
#        resources: {}
#status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: aggregation
  name: aggregation
  namespace: devopstrain
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: aggregation
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aggregation
  namespace: devopstrain
spec:
  rules:
  - host: aggregation.devopstrain.spc5jcoyw7.stackpoint.io
    http:
      paths:
      - path:
        backend:
          serviceName: aggregation
          servicePort: 80
---
